--- a/src/index.css
+++ b/src/index.css
@@ -45,12 +45,32 @@
   }
 }
 
-.custom-popup2 {
-  border-radius: 9999px;
-  background-color: #ff0000;
-  color: #ffffff;
-  padding: 10px;
+
+.content-div{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position:center;
 }
+  .content-div:hover{
+    background-image:
+
+     rgba(255, 255, 255, 0.801)
+    }
+
+    .image-cover  {
+      height:260px;
+    }
+  /*
+  -remove the classes below if you have the 'group-hover'property added in your tailwind config file
+  -also remove the class from the html template
+  */
+    .content-div:hover .fd-cl{ 
+ opacity: 0;
+    }
+    .content-div:hover .fd-sh{ 
+ opacity: 1;
+    }
+
 
 /* 
 mobileS:"320px",
