- hover effect top nav

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
     @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-105 duration-300;
   }
 
+  .hoverEffectsTopbar {
+    @apply transition ease-in-out delay-150  hover:scale-105 hover:bg-[#3b3b3b] duration-200 ;
+  }
+
   .hoverPackageEffects {
     @apply transition ease-in-out delay-[400] hover:-translate-y-1 hover:scale-150 duration-[550] hover:drop-shadow-2xl;
   }
